# Project_dz_DRF

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  migrate.sh  payments_fixture.json  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
courses/: models.py  paginators.py  permissions.py  serializers.py  servises.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_preview_alter_lesson_preview_and_more.py  0003_lesson_course.py  0004_payment.py  0005_course_owner_lesson_owner.py  0006_alter_payment_pay_date.py  0007_course_price.py  0008_course_date_created_course_date_updated.py
subscriptions/: apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
subscriptions/migrations/: 0001_initial.py  0002_alter_subscriber_unique_together.py  0003_subscriber_subscribed.py
users/: models.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: create_custom_superuser.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_avatar_user_city_user_phone_and_more.py  0003_remove_user_username_alter_user_first_name_and_more.py
