[tool.poetry]
name = "project-dz-drf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_dz_drf"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
